[SYNCOPE-405] Replace completed, for audit and logging: currently on log4j 2.0-beta9-SNAPSHOT
git-svn-id: https://svn.apache.org/repos/asf/syncope/trunk@1523969 13f79535-47bb-0310-9956-ffa450edef68